<resources>
    <string name="app_name">Homies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_label">Description</string>
    <string name="post_message">Post Message</string>
    <string name="user">User</string>
    <string name="date_posted">Date Posted</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="post_event">Plan Event</string>
    <string name="post_charge">Post Charge</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="username">Username: </string>
    <string name="useremail">Email: </string>
    <string name="userid">ID: </string>
    <string name="owed">I am owed: </string>
    <string name="owe">I owe: </string>
    <string name="details">View Details</string>

    <string name="editpic">Edit Profile Picture</string>
    <string name="cam">Take Profile Picture</string>
    <string name="gallery">Take From Gallery</string>

    <string name="purchase">I have purchased for </string>
    <string name="purchase_hint">$</string>
    <string name="none">Nothing</string>

    <string name="view_owed">View Owed</string>
    <string name="view_owe">View Owe</string>
    <string name="owe_message">Owe Message</string>
    <string name="you_owe">People you owe:</string>
    <string name="youre_owed">People who owe you:</string>
    <string name="no_owed">No one owes you money!</string>
    <string name="no_owe">You do not owe any money!</string>
</resources>
