<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/avatar_margin"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ContentDescription"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toRightOf="@+id/BOUGHT"
            android:layout_marginLeft="0dp" />


        <TextView
            android:id="@+id/user_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/user"
            android:textSize="@dimen/user_text_size"
            app:layout_constraintLeft_toRightOf="@+id/user_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="16dp"
            android:text="@string/date_posted"
            android:textSize="@dimen/user_text_size"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintLeft_toRightOf="@+id/user_avatar" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:tint="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:srcCompat="@drawable/ic_delete_black_24dp"
            tools:ignore="ContentDescription"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/avatar_margin"
            android:background="@color/card_divider"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_avatar" />

        <TextView
            android:id="@+id/item_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/description_label"
            android:textSize="@dimen/user_text_size"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintLeft_toRightOf="@+id/BOUGHT"
            android:layout_marginLeft="8dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/card_divider"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_textview" />

        <ImageButton
            android:id="@+id/buy_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:tint="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:srcCompat="@drawable/ic_attach_money_black_24dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/BOUGHT"
            android:layout_marginLeft="0dp" />

        <ImageView
            android:id="@+id/BOUGHT"
            android:layout_width="15dp"
            android:layout_height="0dp"
            android:background="@android:color/holo_green_light"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_check_white_24dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
